css/style.css
@import url('https://fonts.googleapis.com/css2?family=Glass+Antiqua&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');

body {
  color: rgb(241, 255, 254);
  background-image: url('../assets/bg1.gif');
  font-weight: 400;

}


/* Links */
a {
    color: rgb(184, 157, 240);
    text-decoration: none;
    
}
a:hover {
    color: rgb(110, 38, 181);
}

.title{
    padding-top: 10px;
    text-shadow: 2px 2px 4px rgba(30, 0, 0, 0.5);
    color:#f2f7f9;
    font-family: 'CoolFont', cursive;
    font-size: 4.5em;
    text-align: center;
    background-size: cover;

}

.p1{
    display: block;
    font-size: 1.2em;
    font-family: "Lora", cursive;
    color: rgb(148, 123, 204);
    line-height: 1.5;
}

.p2{ /*Paragraph style for windows style*/
    display: block;
    font-size: 1.2em;
    font-family: "Lora", cursive;
    color: rgb(238, 188, 255);
    line-height: 1.5;
}

#p2-w7-left{
  width: auto;
  grid-column: 2; 
  padding-left: 10px;
}

.h3{
    font-size: 1.1em;
    font-family: "Glass Antiqua", cursive;
    color: rgb(192, 161, 247);
    line-height: 1.5;
}

.inner_pictures{
  display: flex;
  align-content: flex-end;
  align-items: flex-start;
  flex-wrap: wrap;

}

.upper-picture{
  position: absolute;
  top: 0px; /* Adjust this to position vertically relative to the backgroundbox */
  left: 150px; /* Adjust this to position horizontally from the left edge */
  animation: spin 20s linear infinite;
  width: 200px; /* Made smaller so it doesn't cover too much */
  height: 200px; /* Set explicit height to make it square */
  z-index: 10; /* Ensures it appears on top of other elements */
  transform-origin: 50% 50%; 
  display: block; 
  object-fit: cover; 
}

    @keyframes spin {
      0% {
        transform: rotate(0deg);
      }
      100% {
        transform: rotate(360deg);
      }
    }

    
.title-7{
    font-size: 1.5em;
    font-family: "Glass Antiqua", cursive;
    color: rgb(231, 128, 215);
    line-height: 1.5;
    text-align: center;


}


/*Main centered box. Based on columns*/
.backgroundbox{
    display: grid;
    grid-template-columns: 1fr 2fr; /* Left column smaller, right column larger */
    grid-template-rows: auto auto; /* Two rows for the left column */
    row-gap: 0px; /* No vertical gap between box2 and box3 */
    column-gap: 5px; /* Keep horizontal gap between left and right columns */
    background-color: rgba(46, 22, 202, 0.322);
    width: 80%;
    max-width: 800px;
    border: 3px solid rgba(151, 20, 245, 0.493);
    border-radius: 3px;
    padding: 0; /* Remove any default padding */
    /*Center the box*/
    margin-left: auto;
    margin-right: auto;
}


.box{
  border: 1px solid rgba(0, 0, 0, 0.629);
  padding: 1em;
  background-color: #f4f4f4;
  color: white;
  background-color: rgba(0, 0, 0, 0.436);
  order: 3px solid rgba(87, 8, 143, 0.200);
  border-radius: 3px;   
}

/*Main content box (box1) - spans both rows in the right column*/
#box1{
    grid-column: 2; /* Right column */
    grid-row: 1 / 3; /* Spans both rows */
    background-color: rgba(0, 0, 0, 0.436);
    border: 3px solid rgba(87, 8, 143, 0.200);
    border-radius: 3px; 
}

/*Navigation box (box2) - top left*/
#box2{
    grid-column: 1; /* Left column */
    grid-row: 1; /* First row */
    background-color: rgba(0, 0, 0, 0.436);
    border: 3px solid rgba(87, 8, 143, 0.200);
    border-radius: 3px;

    margin: 0;
    margin-bottom:6px;
}

/* List styling for box2 */
#box2 ul {
  list-style: none; /* Removes the default bullet points */
  padding-left: 0; /* Removes default indentation */
}

/* Style the list items to use a background image as a custom bullet */
#box2 li {
  padding-left: 25px; /* Make space for the custom bullet. Adjust as needed. */
  background-image: url('../assets/icon_1.gif');
  background-size: 20px 20px; /* CHANGE THE SIZE HERE: width height */
  background-repeat: no-repeat;
  background-position: left center; 
  margin-bottom: 10px; /* Adds space between list items */
}


/*Additional box (box3) - bottom left, same column as box2*/
#box3 {
  grid-column: 1; /* Left column, same as box2 */
  grid-row: 2; /* Second row */
  background-color: rgba(0, 0, 0, 0.436);
  border: 3px solid rgba(87, 8, 143, 0.200);
  border-radius: 3px;
  margin: 0; /* Remove any default margins */
}



/* Scrolling text effect */
.scroll-left {
height: 50px; 
overflow: hidden;
position: relative;
/* Match the backgroundbox width and centering */
width: 80%;
max-width: 550px;
margin-left: auto;
margin-right: auto;
}


/* When scroll-left is inside a backgroundbox, make it span both columns */
.backgroundbox .scroll-left {
grid-column: 1 / -1; /* Span from first column to last column */
width: 100%; /* Take full width of the backgroundbox */
max-width: none; /* Remove max-width constraint inside backgroundbox */
margin: 0; /* Remove margin since it's now inside the grid */
position: relative; /* Allows absolutely positioned children to be positioned relative to this element */
}


@font-face {
  font-family: 'CoolFont';
  src: url('../fonts/Dreamscar.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}





/*Additional resources added*/
.scroll-left p {
position: absolute;
width: 100%;
height: 100%;
margin: 0;
line-height: 50px;
text-align: center;
/* Starting position */
-moz-transform:translateX(100%);
-webkit-transform:translateX(100%); 
transform:translateX(100%);
/* Apply animation to this element */ 
-moz-animation: scroll-left 10s linear infinite;
-webkit-animation: scroll-left 10s linear infinite;
animation: scroll-left 10s linear infinite;
}
/* Move it (define the animation) */
@-moz-keyframes scroll-left {
0% { -moz-transform: translateX(100%); }
100% { -moz-transform: translateX(-100%); }
}
@-webkit-keyframes scroll-left {
0% { -webkit-transform: translateX(100%); }
100% { -webkit-transform: translateX(-100%); }
}
@keyframes scroll-left {
0% { 
-moz-transform: translateX(100%); /* Browser bug fix */
-webkit-transform: translateX(100%); /* Browser bug fix */
transform: translateX(100%); 
}
100% { 
-moz-transform: translateX(-100%); /* Browser bug fix */
-webkit-transform: translateX(-100%); /* Browser bug fix */
transform: translateX(-100%); 
}
}


/*Gradient border*/
#border-gradient {
border: 6px solid;
border-image-slice: 1;
border-image-source: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
overflow: auto;
}

